# iRacerApp-V1

./: .gitignore  README.md  index.html  package-lock.json  package.json  preview-end-of-season-v1.html  preview-end-of-season-v2.html  preview-end-of-season-v3.html  preview-end-of-season-v4-interactive.html  preview-event-cards.html  preview-evolucao-alternativas.html  preview-market-v1-dashboard.html  preview-market-v2-grid.html  preview-market-v3-split.html  preview-market-v4-appstyle.html  preview-market-v5-floating.html  preview-market-v6-appstyle.html  preview-market-v7-glass.html  preview-market-v8-glass-premium.html  preview-news-filter-cards.html  preview-news-hero.html  preview-news-reader-minimal-variations.html  preview-news-reader-redesigns.html  preview-news-scope-drawers.html  preview-preseason-estilo-a.html  preview-preseason-estilo-b.html  preview-preseason-estilo-c.html  preview-preseason-estilo-gemini.html  preview-preseason-layout-1.html  preview-preseason-layout-2.html  preview-preseason-layout-3.html  preview-preseason-v1.html  preview-preseason-v2.html  preview-preseason-v3.html  preview-preseason-v4.html  preview-preseason-v5.html  preview-preseason-v6.html  preview-preseason-v7.html  preview-radar.html  preview-sala-metas.html  (+2 more)
src-tauri/: Cargo.toml  __codex_tmp_counts.rs  check_errors.txt  check_errors_ascii.txt  check_errors_v2.txt  check_out.txt  check_output.txt  err.txt  errors.txt  log.txt  tauri.conf.json  test_out.txt  test_out_utf8.txt  test_output.txt  test_output2.txt  test_output_v2.txt  tests3.txt  tests4.txt
src-tauri/src/: lib.rs  (+1 more)
(+375 files in other folders)
