[package]
name = "iracing-career-simulator"
version = "0.1.0"
description = "iRacing Career Simulator"
authors = ["you"]
edition = "2021"

[lib]
name = "iracing_career_simulator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
thiserror = "1"
uuid = { version = "1.22.0", features = ["v4"] }
